2004-10-06  Derek Price  <derek@ximbiot.com>

	Use getpass proto from getpass.h.
	* config.h.in.in: Undo last defn.
	* unistd.h (getpass): Remove proto.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Tell compiler we have a decl for getpass().

2004-10-06  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Define use of replacement getopt functions.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: Undef HAVE_GETOPT_H and HAVE_GETOPT_LONG_ONLY.  It
	sounds like a fairly safe bet that Windoze doesn't have them.

2004-10-06  Mark D. Baushke  <mdb@cvshome.org>

	* unistd.h: Add prototype entries for chdir and close

2004-10-05  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: s/FILESYSTEM/FILE_SYSTEM/ in keeping with GNULIB.
	
2004-10-05  Conrad T. Pino  <Conrad@Pino.com>

	* config.h.in.in: Add #define EOVERFLOW, HAVE_GETCWD, HAVE_GETCWD_NULL.
	* config.h.in: Regenerated for "config.h.in.in" change.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* filesubr.c (xresolvepath): s/xgetwd/xgetcwd/.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* config.h.in.in: #undef USE_UNLOCKED_IO.

2004-09-17  Derek Price  <derek@ximbiot.com>

	* config.h.in: Remove TRUST_OS_FILE_CACHE.

2004-09-17  Derek Price  <derek@ximbiot.com>

	* stripslash.c: Remove file.

2004-09-14  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (cvs_casecmp): Moved to src/subr.c

2004-09-09  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (check_statbuf): Remove unused variables.

2004-09-08  Derek Price  <derek@ximbiot.com>

	* JmgStat.c, JmgStat.h: Convert to use UNIX line endings on UNIX.
	(Thanks to report from Conrad T. Pino <conrad@pino.com>.)

2004-09-07  Derek Price  <derek@ximbiot.com>

	* JmgStat.c, JmgStat.h: New files.
	* filesubr.c (check_statbuf): Use new Windows mod time routine.
	(Thanks to a report from Chris Bohn <cbohn@rrinc.com>, help from J. C.
	Hamlin <jchamlin@ibsys.com>, and a published patch from Jonathan
	Gilligan.)
